--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,7 +26,7 @@ const pageTitle = title === 'Ty Carlson' ? title : `${title} | Ty Carlson`;
   <body>
     <div class="min-h-screen flex flex-col justify-between">
       <Header currentPath={Astro.url.pathname} />
-      <main class="mb-[15vh] min-h-[40vh] px-[5%] md:max-w-[64ch]">
+      <main class="px-[5%] md:max-w-[64ch] mb-[15vh] min-h-[40vh]">
         <slot />
       </main>
       <Footer client:load />
