--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import { getCollection } from 'astro:content';
 import BaseLayout from '../layouts/BaseLayout.astro';
 
-// Get published content sorted by date
 const readingPosts = (await getCollection('reading', ({ data }) => data.published))
   .sort((a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime());
 
@@ -14,9 +13,9 @@ const codePosts = (await getCollection('code', ({ data }) => data.published))
 ---
 
 <BaseLayout>
-  <h1 class="text-3xl md:text-4xl font-bold mb-6 leading-tight">hello, my name is ty carlson</h1>
+  <h1>hello, my name is ty carlson</h1>
 
-  <p class="leading-relaxed mb-4">
+  <p>
     I have been building websites, web apps, mobile apps, design systems, and most anything in
     between for over a decade. I am currently a Senior Frontend Engineer at{' '}
     <a href="https://givebutter.com/" target="_blank" rel="noreferrer nofollow">
@@ -25,36 +24,34 @@ const codePosts = (await getCollection('code', ({ data }) => data.published))
     causes.
   </p>
 
-  <p class="leading-relaxed mb-4">
+  <p>
     I currently live in Connecticut with my wife (Lauren), son (Liam), and daughter (Remi).
   </p>
 
-  <p class="leading-relaxed mb-4">
-    Occasionally I enjoy taking on freelance projects. If you&lsquo;re looking for that sort of
+  <p>
+    Occasionally I enjoy taking on freelance projects. If you're looking for that sort of
     thing, feel free to <a href="mailto:tywayne@fastmail.com">email me</a>.
   </p>
 
   <hr />
 
-  <h2 class="text-2xl md:text-3xl font-bold mb-6 leading-none">reading</h2>
-  <p class="max-w-[34em] leading-relaxed mb-4">
+  <h2>reading</h2>
+  <p>
     Several years ago I re-invigorated my love of reading, and began setting yearly goals and
     tracking the books I chose to read. Here is that list of books I've read, grouped by year.
   </p>
-  <div class="max-w-[34em]">
-    <ul class="my-6 p-0 flex flex-wrap">
-      {readingPosts.map((post) => (
-        <li class="list-none mr-4 mb-4">
-          <a href={`/reading/${post.slug}`}>{post.data.title}</a>
-        </li>
-      ))}
-    </ul>
-  </div>
+  <ul class="flex flex-wrap">
+    {readingPosts.map((post) => (
+      <li class="mr-4 mb-4">
+        <a href={`/reading/${post.slug}`}>{post.data.title}</a>
+      </li>
+    ))}
+  </ul>
 
   <hr />
 
-  <h2 class="text-2xl md:text-3xl font-bold mb-6 leading-none">photography</h2>
-  <p class="leading-relaxed mb-4">
+  <h2>photography</h2>
+  <p>
     Be forewarned, I'm an amateur photographer at best. I bought an old{' '}
     <a href="http://camera-wiki.org/wiki/Yashica_FX-2" target="_blank" rel="noreferrer">
       Yashica FX-2
@@ -63,7 +60,7 @@ const codePosts = (await getCollection('code', ({ data }) => data.published))
     figured out how to process and scan the film myself. I still don't <em>actually</em> know what
     I'm doing, but it's enjoyable nonetheless.
   </p>
-  <p class="leading-relaxed mb-4">
+  <p>
     In 2021, I upgraded my equipment to shoot medium format with a{' '}
     <a
       href="http://camera-wiki.org/wiki/Mamiya_M645_Super,_Pro,_Pro_TL_and_E"
@@ -75,42 +72,38 @@ const codePosts = (await getCollection('code', ({ data }) => data.published))
     and am really loving the format so far. Fingers crossed I don't burn too much more money on this
     hobby!
   </p>
-  <div>
-    <ul class="my-6 p-0 columns-1 sm:columns-2 lg:columns-3">
-      {photographyPosts.map((post) => (
-        <li class="list-none mb-6 break-inside-avoid leading-relaxed">
-          <a href={`/photography/${post.slug}`}>{post.data.title}</a>
-          {post.data.excerpt && (
-            <p class="mt-1 mb-0">
-              <small>{post.data.excerpt}</small>
-            </p>
-          )}
-        </li>
-      ))}
-    </ul>
-  </div>
+  <ul class="columns-1 sm:columns-2 lg:columns-3">
+    {photographyPosts.map((post) => (
+      <li class="break-inside-avoid">
+        <a href={`/photography/${post.slug}`}>{post.data.title}</a>
+        {post.data.excerpt && (
+          <p class="mt-1 mb-0">
+            <small>{post.data.excerpt}</small>
+          </p>
+        )}
+      </li>
+    ))}
+  </ul>
 
   <hr />
 
-  <h2 class="text-2xl md:text-3xl font-bold mb-6 leading-none">code</h2>
-  <p class="max-w-[34em] leading-relaxed mb-4">
+  <h2>code</h2>
+  <p>
     I write code for a living. From time to time I get the hankering to put something out into the
     world as open source, available to anyone who might want to use it. Here are a couple of those
     projects.
   </p>
-  <div class="max-w-[34em]">
-    <ul class="my-6 p-0 flex flex-wrap">
-      {codePosts.map((post) => (
-        <li class="list-none mr-4 mb-4">
-          {post.data.archived ? (
-            <span class="strikethrough">
-              <a href={`/code/${post.slug}`}>{post.data.title}</a>
-            </span>
-          ) : (
+  <ul class="flex flex-wrap">
+    {codePosts.map((post) => (
+      <li class="mr-4 mb-4">
+        {post.data.archived ? (
+          <span class="strikethrough">
             <a href={`/code/${post.slug}`}>{post.data.title}</a>
-          )}
-        </li>
-      ))}
-    </ul>
-  </div>
+          </span>
+        ) : (
+          <a href={`/code/${post.slug}`}>{post.data.title}</a>
+        )}
+      </li>
+    ))}
+  </ul>
 </BaseLayout>
