--- a/src/pages/rowengartner/index.astro
+++ b/src/pages/rowengartner/index.astro
@@ -1,8 +1,8 @@
 ---
-import '../../styles/global.css';
-import Rowengartner from '../../components/Rowengartner';
+import "../../styles/global.css";
+import Rowengartner from "../../components/Rowengartner";
 
-const title = 'Henry Rowengartner';
+const title = "Henry Rowengartner";
 ---
 
 <!doctype html>
