--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @plugin '@tailwindcss/typography';
 
 /* Design tokens */
@@ -7,10 +7,11 @@
   --color-background: #e4dbcd;
   --color-background-alt: #bbb5aa;
 
-  --font-family-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-  --font-family-mono: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  --font-family-sans:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu,
+    Cantarell, "Helvetica Neue", sans-serif;
+  --font-family-mono:
+    source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 /* Dark mode colors */
@@ -36,11 +37,18 @@ body {
   font-size: 1.6rem;
   background: var(--color-background);
   color: var(--color-foreground);
-  transition: 0.2s ease-in background, 0.2s ease-in color;
+  transition:
+    0.2s ease-in background,
+    0.2s ease-in color;
 }
 
 /* Typography */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   line-height: 1.25;
   margin: 0;
   margin-bottom: 2.4rem;
@@ -79,7 +87,10 @@ a {
   text-decoration: none;
   font-weight: bold;
   box-shadow: 0 2px 0 var(--color-foreground);
-  transition: 0.2s ease-in color, 0.2s ease-in box-shadow, 0.2s ease-in opacity;
+  transition:
+    0.2s ease-in color,
+    0.2s ease-in box-shadow,
+    0.2s ease-in opacity;
 }
 
 a:hover {
@@ -119,7 +130,9 @@ blockquote {
   border-left: 3px solid var(--color-foreground);
   padding: 2.4rem;
   margin: 0 0 1.6rem 0;
-  transition: 0.2s ease-in background-color, 0.2s ease-in border-left;
+  transition:
+    0.2s ease-in background-color,
+    0.2s ease-in border-left;
 }
 
 blockquote p:last-child {
@@ -168,23 +181,6 @@ blockquote p:last-child {
   border-radius: 2px;
   background-color: var(--color-foreground);
   transition: 0.2s ease-in background-color;
-}
-
-/* Utilities */
-.visually-hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-  white-space: nowrap;
-}
-
-.strikethrough {
-  text-decoration: line-through;
 }
 
 /* Prose overrides */
