--- a/src/pages/code/index.astro
+++ b/src/pages/code/index.astro
@@ -1,40 +1,42 @@
 ---
-import { getCollection } from 'astro:content';
-import BaseLayout from '../../layouts/BaseLayout.astro';
+import { getCollection } from "astro:content";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 
-const posts = (await getCollection('code', ({ data }) => data.published))
-  .sort((a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime());
+const posts = (await getCollection("code", ({ data }) => data.published)).sort(
+  (a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime(),
+);
 
-const title = 'Code';
-const description = "I write code for a living. From time to time I get the hankering to put something out into the world as open source.";
+const title = "Code";
+const description =
+  "I write code for a living. From time to time I get the hankering to put something out into the world as open source.";
 ---
 
 <BaseLayout title={title} description={description}>
   <h1 class="text-2xl md:text-3xl font-bold mb-6 leading-none">code</h1>
 
   <p class="max-w-[34em] leading-relaxed mb-4">
-    I write code for a living. From time to time I get the hankering to put something out into the
-    world as open source, available to anyone who might want to use it. Here are a couple of those
-    projects.
+    I write code for a living. From time to time I get the hankering to put
+    something out into the world as open source, available to anyone who might
+    want to use it. Here are a couple of those projects.
   </p>
 
   <div class="max-w-[34em]">
     <ul class="my-6 p-0 flex flex-wrap">
-      {posts.map((post) => (
-        <li class="list-none mr-4 mb-4">
-          {post.data.archived ? (
-            <span class="strikethrough">
+      {
+        posts.map((post) => (
+          <li class="list-none mr-4 mb-4">
+            {post.data.archived ? (
+              <span class="line-through">
+                <a href={`/code/${post.slug}`}>{post.data.title}</a>
+              </span>
+            ) : (
               <a href={`/code/${post.slug}`}>{post.data.title}</a>
-            </span>
-          ) : (
-            <a href={`/code/${post.slug}`}>{post.data.title}</a>
-          )}
-        </li>
-      ))}
+            )}
+          </li>
+        ))
+      }
     </ul>
   </div>
 
-  <a href="/" class="inline-block mt-32">
-    &larr; home
-  </a>
+  <a href="/" class="inline-block mt-32"> &larr; home </a>
 </BaseLayout>
