--- a/src/pages/rowengartner/index.astro
+++ b/src/pages/rowengartner/index.astro
@@ -1,6 +1,6 @@
 ---
-import "../../styles/global.css";
-import Rowengartner from "../../components/Rowengartner";
+import "@/styles/global.css";
+import Rowengartner from "@/components/Rowengartner";
 
 const title = "Henry Rowengartner";
 ---
