--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,133 +1,48 @@
 ---
 import { getCollection } from "astro:content";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import ReadingSection from "@/components/ReadingSection.astro";
+import PhotographySection from "@/components/PhotographySection.astro";
+import CodeSection from "@/components/CodeSection.astro";
 
-const readingPosts = (
-  await getCollection("reading", ({ data }) => data.published)
-).sort(
+const readingPosts = (await getCollection("reading", ({ data }) => data.published)).sort(
   (a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime(),
 );
 
-const photographyPosts = (
-  await getCollection("photography", ({ data }) => data.published)
-).sort(
+const photographyPosts = (await getCollection("photography", ({ data }) => data.published)).sort(
   (a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime(),
 );
 
-const codePosts = (
-  await getCollection("code", ({ data }) => data.published)
-).sort(
+const codePosts = (await getCollection("code", ({ data }) => data.published)).sort(
   (a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime(),
 );
 ---
 
-<BaseLayout>
+<BaseLayout className="prose">
   <h1>hello, my name is ty carlson</h1>
 
-  <p>
-    I have been building websites, web apps, mobile apps, design systems, and
-    most anything in between for over a decade. I am currently a Senior Frontend
-    Engineer at{" "}
-    <a href="https://givebutter.com/" target="_blank" rel="noreferrer nofollow">
-      Givebutter
-    </a>, bringing together everything changemakers need to successfully raise
-    funds for good causes.
+  <p class="leading-relaxed">
+    I have been building websites, web apps, mobile apps, design systems, and most anything in
+    between for over a decade. I am currently a Senior Frontend Engineer at{" "}
+    <a href="https://givebutter.com/" target="_blank" rel="noreferrer nofollow">Givebutter</a>,
+    bringing together everything changemakers need to successfully raise funds for good causes.
   </p>
 
-  <p>
-    I currently live in Connecticut with my wife (Lauren), son (Liam), and
-    daughter (Remi).
+  <p class="leading-relaxed">
+    I currently live in Connecticut with my wife (Lauren), son (Liam), and daughter (Remi).
   </p>
 
-  <p>
-    Occasionally I enjoy taking on freelance projects. If you're looking for
-    that sort of thing, feel free to <a href="mailto:tywayne@fastmail.com"
-      >email me</a
-    >.
+  <p class="leading-relaxed">
+    Occasionally I enjoy taking on freelance projects. If you're looking for that sort of thing,
+    feel free to <a href="mailto:tywayne@fastmail.com">email me</a>.
   </p>
-
   <hr />
 
-  <h2>reading</h2>
-  <p>
-    Several years ago I re-invigorated my love of reading, and began setting
-    yearly goals and tracking the books I chose to read. Here is that list of
-    books I've read, grouped by year.
-  </p>
-  <ul class="flex flex-wrap">
-    {
-      readingPosts.map((post) => (
-        <li class="mr-4 mb-4">
-          <a href={`/reading/${post.slug}`}>{post.data.title}</a>
-        </li>
-      ))
-    }
-  </ul>
-
+  <ReadingSection posts={readingPosts} />
   <hr />
 
-  <h2>photography</h2>
-  <p>
-    Be forewarned, I'm an amateur photographer at best. I bought an old{" "}
-    <a
-      href="http://camera-wiki.org/wiki/Yashica_FX-2"
-      target="_blank"
-      rel="noreferrer"
-    >
-      Yashica FX-2
-    </a>{" "}
-    on eBay to try out film, and quickly learned how expensive it is to process. The
-    DIYer in me figured out how to process and scan the film myself. I still don't
-    <em>actually</em> know what I'm doing, but it's enjoyable nonetheless.
-  </p>
-  <p>
-    In 2021, I upgraded my equipment to shoot medium format with a{" "}
-    <a
-      href="http://camera-wiki.org/wiki/Mamiya_M645_Super,_Pro,_Pro_TL_and_E"
-      target="_blank"
-      rel="noreferrer"
-    >
-      Mamiya 645 Super
-    </a>{" "}
-    and am really loving the format so far. Fingers crossed I don't burn too much
-    more money on this hobby!
-  </p>
-  <ul class="columns-1 sm:columns-2 lg:columns-3">
-    {
-      photographyPosts.map((post) => (
-        <li class="break-inside-avoid">
-          <a href={`/photography/${post.slug}`}>{post.data.title}</a>
-          {post.data.excerpt && (
-            <p class="mt-1 mb-0">
-              <small>{post.data.excerpt}</small>
-            </p>
-          )}
-        </li>
-      ))
-    }
-  </ul>
-
+  <PhotographySection posts={photographyPosts} />
   <hr />
 
-  <h2>code</h2>
-  <p>
-    I write code for a living. From time to time I get the hankering to put
-    something out into the world as open source, available to anyone who might
-    want to use it. Here are a couple of those projects.
-  </p>
-  <ul class="flex flex-wrap">
-    {
-      codePosts.map((post) => (
-        <li class="mr-4 mb-4">
-          {post.data.archived ? (
-            <span class="line-through">
-              <a href={`/code/${post.slug}`}>{post.data.title}</a>
-            </span>
-          ) : (
-            <a href={`/code/${post.slug}`}>{post.data.title}</a>
-          )}
-        </li>
-      ))
-    }
-  </ul>
+  <CodeSection posts={codePosts} />
 </BaseLayout>
