--- a/src/pages/photography/[...slug].astro
+++ b/src/pages/photography/[...slug].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
-import BaseLayout from "../../layouts/BaseLayout.astro";
-import { getImagesFromDirectory } from "../../lib/images";
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import { getImagesFromDirectory } from "@/lib/images";
 
 export async function getStaticPaths() {
   const posts = await getCollection("photography");
@@ -23,11 +23,7 @@ const description = `Photography - ${post.data.title}`;
     <h1 class="text-2xl md:text-3xl font-bold mb-6 leading-none">
       {post.data.title}
     </h1>
-    {
-      post.data.excerpt && (
-        <p class="leading-relaxed mb-4">{post.data.excerpt}</p>
-      )
-    }
+    {post.data.excerpt && <p class="leading-relaxed mb-4">{post.data.excerpt}</p>}
 
     <ul class="my-6 p-0">
       {
