--- a/src/pages/photography/index.astro
+++ b/src/pages/photography/index.astro
@@ -1,10 +1,9 @@
 ---
 import { getCollection } from "astro:content";
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import PhotographySection from "@/components/PhotographySection.astro";
 
-const posts = (
-  await getCollection("photography", ({ data }) => data.published)
-).sort(
+const posts = (await getCollection("photography", ({ data }) => data.published)).sort(
   (a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime(),
 );
 
@@ -13,51 +12,5 @@ const description = "Be forewarned, I'm an amateur photographer at best.";
 ---
 
 <BaseLayout title={title} description={description}>
-  <h1 class="text-2xl md:text-3xl font-bold mb-6 leading-none">photography</h1>
-
-  <p class="leading-relaxed mb-4">
-    Be forewarned, I'm an amateur photographer at best. I bought an old{" "}
-    <a
-      href="http://camera-wiki.org/wiki/Yashica_FX-2"
-      target="_blank"
-      rel="noreferrer"
-    >
-      Yashica FX-2
-    </a>{" "}
-    on eBay to try out film, and quickly learned how expensive it is to process. The
-    DIYer in me figured out how to process and scan the film myself. I still don't
-    <em>actually</em> know what I'm doing, but it's enjoyable nonetheless.
-  </p>
-
-  <p class="leading-relaxed mb-4">
-    In 2021, I upgraded my equipment to shoot medium format with a{" "}
-    <a
-      href="http://camera-wiki.org/wiki/Mamiya_M645_Super,_Pro,_Pro_TL_and_E"
-      target="_blank"
-      rel="noreferrer"
-    >
-      Mamiya 645 Super
-    </a>{" "}
-    and am really loving the format so far. Fingers crossed I don't burn too much
-    more money on this hobby!
-  </p>
-
-  <div>
-    <ul class="my-6 p-0 columns-1 sm:columns-2 lg:columns-3">
-      {
-        posts.map((post) => (
-          <li class="list-none mb-6 break-inside-avoid leading-relaxed">
-            <a href={`/photography/${post.slug}`}>{post.data.title}</a>
-            {post.data.excerpt && (
-              <p class="mt-1 mb-0">
-                <small>{post.data.excerpt}</small>
-              </p>
-            )}
-          </li>
-        ))
-      }
-    </ul>
-  </div>
-
-  <a href="/" class="inline-block mt-32"> &larr; home </a>
+  <PhotographySection posts={posts} isStandalonePage />
 </BaseLayout>
