--- a/src/pages/reading/[...slug].astro
+++ b/src/pages/reading/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection, render } from "astro:content";
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "@/layouts/BaseLayout.astro";
 
 export async function getStaticPaths() {
   const posts = await getCollection("reading");
@@ -27,18 +27,17 @@ const description = `List of books I read in ${post.data.title}, in chronologica
     </p>
 
     <div class="progress">
-      <progress
-        id="progress"
-        class="inline"
-        value={post.data.book_count}
-        max={post.data.goal}></progress>
+      <progress id="progress" class="inline" value={post.data.book_count} max={post.data.goal}
+      ></progress>
       <label for="progress">
         Completed {post.data.book_count} out of {post.data.goal} book goal.
       </label>
     </div>
 
     <div class="max-w-[34em]">
-      <div class="readingList prose prose-lg">
+      <div
+        class="prose prose-lg prose-ul:list-none prose-ul:p-0 prose-li:p-0 prose-li:leading-normal prose-li:mb-8 prose-ul:mt-8"
+      >
         <Content />
       </div>
     </div>
